[build-system]
requires = ["setuptools>61.0", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inpost-locker-finder"
dynamic = ["version"]
description = "A fast and beautiful CLI tool for finding nearest InPost points."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT"}
authors = [
    {name = "Jan Barchanowicz"}
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

[project.scripts]

ilf = "ilf.cli:app"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]